Fixat dark mode

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -11,3 +11,9 @@ $primary-font: helvetica, sans-serif, arial;
     height: $size;
   
   }
+
+
+%margin-auto {
+    margin: 0 auto;
+}
+  
